--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Gavin Sharkey</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
